--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-client": "^2.6.4",
     "apollo-upload-client": "^11.0.0",
     "core-js": "^2.6.5",
+    "graphql": "^14.4.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0"
