--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^14.4.2",
     "katex": "^0.11.0",
     "markdown-it": "^9.1.0",
+    "prismjs": "^1.17.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0"
